--- a/unit_3_base_types/pom.xml
+++ b/unit_3_base_types/pom.xml
@@ -2,17 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>nix_7</artifactId>
+        <groupId>org.example</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>nix_7</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>unit_1_git</module>
-        <module>unit_2_compile</module>
-        <module>unit_3_base_types</module>
-    </modules>
+    <groupId>c</groupId>
+    <artifactId>unit_3_base_types</artifactId>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
